Update: Fixed About Html Text Fixed Scrolling Text on Mobile Fixed Footer Links a::after Elements

--- a/style.scss
+++ b/style.scss
@@ -490,7 +490,7 @@ footer {
 .footer-links a::after {
   content: "";
   position: absolute;
-  top: 1vw;
+  top: 0.65vw;
   left: 0;
   height: 1vw;
   width: 100%;
@@ -797,6 +797,9 @@ footer {
   html {
     font-size: 80%;
   }
+  #links {
+    transform: translate3d(4.5%, 0, 0) !important;
+  }
   .education-element {
     font-size: calc(0.8rem + 0.8vw);
   }
@@ -816,6 +819,9 @@ footer {
   .contact-text span,
   .contact-text a {
     font-size: calc(1rem + 1vw);
+  }
+  .cursor {
+    display: none;
   }
 }
 @media screen and (max-width: 480px) {
